--- a/templates/books.html
+++ b/templates/books.html
@@ -3,35 +3,36 @@
 
 {% for book in books%}
 <div class="product">
-    <div class="books_info">
+    <div id="results"></div>
+    <div class="books_info" id="book-info">
         <div class="id">
-            <h1>{{book['id']}}</h1>
+            <h1>{{book.id}}</h1>
         </div>
         <div class="books_image">
-            <img src="{{book['image']}}" alt="">
+            <img src="{{ book.image }}" alt="{{ book.book_title }}">
         </div>
         <div class="product-summary">
             <div class="title">
-                <h1>{{book['book_title']}}</h1>
+                <h1>{{book.book_title}}</h1>
             </div>
             <div class="author-publisher">
-                <p>{{book['book_author']}}</p>
-                <p>Publisher:{{book['publisher']}}</p>
+                <p>{{book.book_author}}</p>
+                <p>Publisher:{{book.publisher}}</p>
             </div>
             <div class="attributes">
-                <div class="attributes">Release : {{book['release']}}</div>
-                <div class="attributes">Language : {{book['language']}}</div>
+                <div class="attributes">Release : {{book.release}}</div>
+                <div class="attributes">Language : {{book.language}}</div>
             </div>
             <div class="price-attrib">
-                <div class="price">{{book['price']}}</div>
+                <div class="price"> <strong>&#8377;</strong> {{book.price}}</div>
                 <div class="right_hub">
                 </div>
             </div>
             <div class="action">
                 <div class="action-btn">
-                    <input type="button" class="btn-green" value="Buy Now">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
+                    <button type="button" id="buy-now">Buy Now</button>
+                    <div id="add_to_cart" class="fas fa-shopping-cart"></div>
+                    <div id="add_to_fav" class="fas fa-heart"></div>
                 </div>
             </div>
         </div>
